# simple_CLI

./: CMakeLists.txt  Changelog.md  LICENSE  LICENSE.md  README.md  Simple_CLI.cpp  Simple_CLI.h  Simple_CLI.nuspec  library.cpp  library.h
Release/: Simple_CLI.h  Simple_CLI.lib
